--- a/rental.html
+++ b/rental.html
@@ -6,231 +6,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
-  <style>
-    * {
-      font-family: "Poppins", sans-serif;
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    body {
-      background-color: #f4f4f4;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
-    header {
-      background-color: #2c3e50;
-      color: white;
-      padding: 20px 0;
-      text-align: center;
-    }
-    nav {
-      background-color: #34495e;
-      padding: 10px 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    .nav-user {
-      display: flex;
-      align-items: center;
-      gap: 15px;
-      flex: 1;
-    }
-    .username {
-      color: white;
-      font-weight: 500;
-    }
-    .nav-center {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 20px;
-      flex: 1;
-    }
-    .nav-logout {
-      display: flex;
-      justify-content: flex-end;
-      flex: 1;
-    }
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-      padding: 5px 10px;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    .logout-btn {
-      background-color: #e74c3c;
-      color: white;
-      border: none;
-      padding: 5px 15px;
-      border-radius: 4px;
-      cursor: pointer;
-      font-weight: 500;
-    }
-    .logout-btn:hover {
-      background-color: #c0392b;
-    }
-    .container {
-      padding: 40px;
-      flex: 1;
-    }
-    footer {
-      background-color: #2c3e50;
-      color: white;
-      text-align: center;
-      padding: 15px;
-      width: 100%;
-    }
-    .dropdown {
-      position: relative;
-      display: inline-block;
-    }
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      background-color: #f9f9f9;
-      border-radius: 5px;
-      min-width: 160px;
-      box-shadow: 0 8px 16px rgba(0,0,0,0.2);
-      z-index: 1;
-    }
-    .dropdown:hover .dropdown-content {
-      display: block;
-    }
-    .dropdown-content a {
-      color: black;
-      padding: 10px 15px;
-      text-decoration: none;
-      display: block;
-      border-radius: 5px;
-    }
-    .dropdown-content a:hover {
-      background-color: #ddd;
-      border-radius: 5px;
-    }
-    .rental-container {
-      display: flex;
-      max-width: 1200px;
-      margin: 0 auto;
-      gap: 30px;
-    }
-    .available-books {
-      flex: 2;
-      background-color: white;
-      border-radius: 8px;
-      padding: 20px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    }
-    .rental-form {
-      flex: 1;
-      background-color: white;
-      border-radius: 8px;
-      padding: 20px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    }
-    .book-list {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-      gap: 15px;
-      margin-top: 20px;
-    }
-    .book-item {
-      border: 1px solid #ddd;
-      border-radius: 5px;
-      padding: 15px;
-      cursor: pointer;
-      transition: all 0.3s;
-    }
-    .book-item:hover {
-      background-color: #f0f8ff;
-      border-color: #2c3e50;
-    }
-    .book-item.selected {
-      background-color: #e1f5fe;
-      border-color: #0288d1;
-    }
-    .book-title {
-      font-weight: 600;
-      margin-bottom: 5px;
-    }
-    .book-author {
-      color: #666;
-      font-size: 14px;
-    }
-    .book-genre {
-      color: #16a085;
-      font-size: 12px;
-      font-weight: 500;
-      margin-top: 5px;
-    }
-    .form-group {
-      margin-bottom: 20px;
-      text-align: left;
-    }
-    .form-group label {
-      display: block;
-      font-weight: 500;
-      margin-bottom: 8px;
-    }
-    .form-control {
-      width: 100%;
-      padding: 10px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      font-size: 16px;
-    }
-    .btn {
-      background-color: #34495e;
-      color: white;
-      border: none;
-      padding: 12px 20px;
-      border-radius: 4px;
-      cursor: pointer;
-      font-size: 16px;
-      font-weight: 500;
-      width: 100%;
-    }
-    .btn:hover {
-      background-color: #2c3e50;
-    }
-    .page-title {
-      color: #2c3e50;
-      margin-bottom: 10px;
-      text-align: center;
-    }
-    .page-subtitle {
-      text-align: center;
-      color: #666;
-      margin-bottom: 30px;
-    }
-    .genre-filter {
-      display: flex;
-      gap: 10px;
-      margin-bottom: 15px;
-      flex-wrap: wrap;
-    }
-    .genre-btn {
-      padding: 5px 15px;
-      background-color: #ecf0f1;
-      border: none;
-      border-radius: 20px;
-      cursor: pointer;
-      font-size: 14px;
-      transition: all 0.2s;
-    }
-    .genre-btn:hover {
-      background-color: #bdc3c7;
-    }
-    .genre-btn.active {
-      background-color: #16a085;
-      color: white;
-    }
-  </style>
+  <link rel="stylesheet" href="./styles/rental.css">
 </head>
 <body>
   <header>
@@ -243,6 +19,8 @@
     </div>
     <div class="nav-center">
       <a href="./Home.html">Home</a>
+      <a href="./addBooks.html">Add Book</a>
+      <a href="./rental.html" style="background-color: #16a085; border-radius: 4px;">Rent a Book</a>
       <div class="dropdown">
         <a href="#">Books ▾</a>
         <div class="dropdown-content">
@@ -252,8 +30,6 @@
           <a href="#" onclick="filterByGenre('Travel')">Travel</a>
         </div>
       </div>
-      <a href="./addBooks.html">Add Book</a>
-      <a href="./rental.html" style="background-color: #16a085; border-radius: 4px;">Rent a Book</a>
     </div>
     <div class="nav-logout">
       <button class="logout-btn">Logout</button>
